# T-AIA-901

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  env.example  lint.sh  pyproject.toml
.github/workflows/: bumpversion.yml  mirroring.yml
aia-adr/: TA-NPL.ipynb  TA-NPL.md  TA-pathfinder.ipynb  TA-pathfinder.md  TA-speech-to-text.ipynb  TA-speech-to-text.md
aia-data/: README.md  gares.md  reservation-first-dataset-test.csv  reservation-first-dataset-train.csv
aia-front/: README.md  app.py
aia-script/2_module_NLP/: script-NLP.py  tokenization_first_POC.py  tokenization_second_POC.py
aia-script/2_module_NLP/models/: README.md
aia-script/3_module_pathfinder/: script-pathfinder.py
aia-script/3_module_pathfinder/sandbox/: script_pathfinder_one.py
